--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="plus">+</string>
     <string name="equal">=</string>
 
-    <string name="enterValue">Enter a value</string>
+    <string name="display">Enter a value</string>
     <string name="delete">Delete</string>
 
 
